<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vier Gwinnt - Bavarian Edition</string>
    <string name="hello_world">Hello world!</string>
    <string name="endTheGame">Ende</string>
    <string name="action_settings">Settings</string>
    <string name="question_mark">""</string>
    <string name="title_activity_menue">Hauptmenü</string>
    <string name="title_activity_game">Vier Gwinnt - Bavarian Edition</string>
    <string name="title_activity_login">Omeln</string>
    <string name="Login">Omeln</string>
    <string name="Nickname">Nicknam</string>
    <string name="Passwort">Passwort</string>
    <string name="PWWH">Passwort nommol</string>
    <string name="logcheckbutton">Bestätigen</string>
    <string name="title_activity_register">Nei omeln</string>
    <string name="register">Bin nei do</string>
    <string name="blank"></string>
    <string name="greetings">Des is de bayrische Version</string>
    <string name="greetings2">vo 4 gwinnt. Vui Spaß</string>
    <string name="greetings3">" wünscht des Entwickler-Team"</string>
    <string name="restart">Nei ofanga</string>
    <string name="title_activity_overview">Übersicht</string>
    <string name="search">Freind suacha</string>
    <string name="outstandinggames">De Spui san offa:</string>
    <string name="simplegame">"Spui afm Delefon "</string>
    <string name="mainmenuegamebutton">Startbuldschiam</string>
    <string name="currentplayers">Gega de spuist eiz grod</string>
    <string name="alreadyplayed">Gega de host scho amoi gspuit</string>
    <string name="hansl1">Hansl Oans</string>
    <string name="hansl2">Hansl Zwoa</string>
    <string name="preus">Preussenversion</string>
    <string name="bavarian">Originalversion</string>
    <string name="gamestart">Gib a Bestellung fia an Diesch af</string>
    <string name="actuellplayer">Grod spuit da:</string>
    <string name="search_hint">Freind suacha</string>
    <string name="title_activity_search_results">Suche</string>
    <string name="suchtext">Du suachst an: </string>
    <string name="blocker">Rechnung verfügbar?</string>
    <string name="winstring">Gwunna! Nummol?</string>
    <string name="drawstring">Es wards gleich guad! Nummol?</string>
    <string name="setblock">Oa Rei duachs zoin blokian</string>
    <string name="blockedrow">De Bedienung kassiad grod</string>
    <string name="loginheader">Anmelden</string>
    <string name="registerheader">Registrieren</string>
    <string name="overviewheader">Übersicht</string>
    <string name="title_activity_gameoffline">Offline Spiel</string>
    <string name="musicname">musicname</string>
    <string name="infoname">infoname</string>

</resources>
