<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="de.ur.mi.android.excercises.starter.LoginActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/reghead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/red" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Nickname"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Passwort"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PWWH"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/regcheckbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logcheckbutton" />

    <TextView
        android:id="@+id/regname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/regpw1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank" />

    <TextView
        android:id="@+id/regpw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank" />

</LinearLayout>