<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.ur.mi.android.excercises.starter.LoginActivity"
    tools:ignore="MergeRootFrame" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/loghead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/Login"
        android:gravity="center"
        android:textColor="@color/red" />

   

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Nickname"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Passwort"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/logcheckbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logcheckbutton" />

     <TextView
        android:id="@+id/logname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank" />
     <TextView
        android:id="@+id/logpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank" />
</LinearLayout>